--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.12.2",
+    "sass": "^1.71.1",
     "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
   },
