--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "react-icons": "^5.0.1",
     "react-on-screen": "^2.1.1",
     "react-parallax-tilt": "^1.7.212",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.12.2",
     "sass": "^1.71.1",
+    "styled-components": "^6.1.8",
     "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
   },
