--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "perezdaniel_portfolio",
+  "homepage": "https://danielpsnz.github.io/perezdaniel_portfolio/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,6 +11,7 @@
     "animate.css": "^4.1.1",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
+    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
@@ -30,7 +32,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject", 
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
